examples/datalog/18_advanced_patterns/41_pivot_simulation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_pivot
Knowledge graph 'test_pivot' created.
Switched to knowledge graph: test_pivot
> .kg use test_pivot
Switched to knowledge graph: test_pivot
> +sales[("Q1", 100), ("Q2", 200), ("Q3", 150), ("Q4", 300)].
Inserted 4 fact(s) into 'sales'.
> q1_sales(Val) :- sales("Q1", Val).
1 rows:
  (100)
(session: 1 rule(s))
> q2_sales(Val) :- sales("Q2", Val).
1 rows:
  (200)
(session: 2 rule(s))
> ?- q1_sales(V).
1 rows:
  (100)
> ?- q2_sales(V).
1 rows:
  (200)
> +total(<SUM:Val>) :- sales(_, Val).
Script error: Parse error: Invalid term: '<SUM:Val>'
